# neurips-skg

./: .gitignore  main.py  pyproject.toml
grobid_pipeline/: client.py  config.py  exceptions.py  models.py  parser.py  utils.py
notebooks/: grobid_optimized.ipynb
notebooks/processed_data/: neurips_2021_conference.jsonl  neurips_2021_datasets_and_benchmarks.jsonl  neurips_2022_conference.jsonl  neurips_2022_datasets_and_benchmarks.jsonl  neurips_2023_conference.jsonl  neurips_2023_datasets_and_benchmarks.jsonl  neurips_2024_conference.jsonl  neurips_2024_datasets_and_benchmarks.jsonl
