[tool.poetry]
name = "neurips-kg"
version = "0.1.0"
description = ""
authors = ["duyhxm <2251012049duy@ou.edu.vn>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
openreview-py = "^1.51.2"
notebook = "^7.4.5"
tqdm = "^4.67.1"
pandas = "^2.3.2"
google-generativeai = "^0.8.5"
python-dotenv = "^1.1.1"
django-ratelimit2 = "^0.4.2"
seaborn = "^0.13.2"
matplotlib = "^3.10.6"
pandas-stubs = "^2.3.2.250827"
networkx = "^3.5"
tabulate = "^0.9.0"
lxml = "^6.0.1"
requests-toolbelt = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
